[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="resultado1" type="LineEdit" parent="."]
margin_left = 103.0
margin_top = 38.0
margin_right = 398.0
margin_bottom = 128.0

[node name="btn1" type="Button" parent="resultado1"]
anchor_right = 0.041
anchor_bottom = 0.111
margin_left = 317.0
margin_top = 15.0
margin_right = 375.905
margin_bottom = 70.01
text = "ok"

[node name="resultado2" type="LineEdit" parent="."]
margin_left = 504.0
margin_top = 161.0
margin_right = 807.0
margin_bottom = 251.0

[node name="texto" type="TextEdit" parent="."]
margin_left = 110.0
margin_top = 167.0
margin_right = 365.0
margin_bottom = 253.0

[node name="Button" type="Button" parent="."]
margin_left = 402.0
margin_top = 180.0
margin_right = 478.0
margin_bottom = 232.0
text = "mostrar"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 27.0
margin_top = 67.0
margin_right = 85.0
margin_bottom = 91.0
text = "1"

[node name="resultado3" type="LineEdit" parent="."]
margin_left = 101.0
margin_top = 284.0
margin_right = 396.0
margin_bottom = 374.0

[node name="btn3" type="Button" parent="resultado3"]
anchor_right = 0.041
anchor_bottom = 0.111
margin_left = 317.0
margin_top = 15.0
margin_right = 375.905
margin_bottom = 70.01
text = "ok"

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 25.0
margin_top = 313.0
margin_right = 83.0
margin_bottom = 337.0
text = "3"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 32.0
margin_top = 199.0
margin_right = 90.0
margin_bottom = 223.0
text = "2"

[node name="resultado4" type="LineEdit" parent="."]
margin_left = 497.0
margin_top = 414.0
margin_right = 800.0
margin_bottom = 504.0

[node name="texto4" type="TextEdit" parent="."]
margin_left = 103.0
margin_top = 420.0
margin_right = 358.0
margin_bottom = 506.0

[node name="Button4" type="Button" parent="."]
margin_left = 395.0
margin_top = 433.0
margin_right = 471.0
margin_bottom = 485.0
text = "mostrar"

[node name="LineEdit4" type="LineEdit" parent="."]
margin_left = 25.0
margin_top = 452.0
margin_right = 83.0
margin_bottom = 476.0
text = "4"

[connection signal="pressed" from="resultado1/btn1" to="." method="_on_btn1_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="resultado3/btn3" to="." method="_on_btn3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
